Prevent carousel arrows from overlapping megamenu

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -220,7 +220,6 @@ $loading-background-color: $secondary__color;
     }
 }
 
-
 .carousel .slick-slider {
     .slick-dots {
         .slick-active button {
@@ -266,6 +265,7 @@ $loading-background-color: $secondary__color;
     .slick-arrow {
         background-color: transparent;
         color: $c-royal;
+        z-index: 1;
 
         @include max-screen($screen__m) {
             display: none !important; // override slick
